2009-06-23  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#124133 No potrait mode when there is an incoming event preview
		  in switcher view.

	Naturally, if the poor, otherwise useless client is standing on the
	top of the window stack.

	* src/mb/hd-note.c:
	  Override MBWMClientDialog::stacking_layer() for incoming event
	  notifs.

2009-06-23  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.56

2009-06-22  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	NB#122710 Weird screen appearing after closing the camera application
	
	* src/home/hd-home.c: We should set WM_CLIENT_MACHINE and _NET_WM_PID
	on the desktop window.

2009-06-22  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	NB#121966 Banners displayed even when Do not Disturb flag is enabled.

	* src/mb/hd-comp-mgr.c: Banner notes are only discarded during DND
	if either they don't have a parent window or their parent window
	is not uppermost.  (The previous code checked whether the banner
	itself was uppermost.)

2009-06-22  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	  Make scroll indicators MLG 2.3 compilant.

	* src/tidy/tidy-scroll-view.c:
	  Set default indicator width/height 8 pixels.
	  Set a 8 pixel right-padding by default.

2009-06-22  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	  Clean up the mess.

	* src/mb/hd-note.c (hd_note_init):
	  Rather than stacking low move HdNoteIncomingEvent:s off the screen.

2009-06-22  Gordon Williams <gordon.williams@collabora.co.uk>

	* tests/Makefile.am
	* tests/test-large-note.c (Added): Test for NB#117673
	* src/mb/hd-comp-mgr.c: Remove old fix for NB#117673 as it breaks
	                        stacking.
	* src/home/hd-render-manager.c: New fix for NB#117673, which fixes
	  other bug where any fullscreen window of a type not covered in 
	  update_blur_state would be blurred regardless of whether it
	  should have been or not.

2009-06-22  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
